# AISL-Isaac-ROS

./: .gitignore  CLAUDE.md  plan.md  research.md
install/: local_setup.sh  setup.sh
install/GOAT/lib/GOAT/: test_topic_io
install/GOAT/share/GOAT/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/goat/lib/goat/: test_topic_io
install/goat/share/goat/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/goat/: CLAUDE.md  package.xml  setup.py
src/goat/goat/goat_sim/control/: control_pipeline.py  safety_limiter.py
src/goat/goat/goat_sim/estimation/: filters.py
src/goat/goat/goat_sim/model/: goat_model.py  model_builder.py
src/goat/goat/nodes/: control_node.py  nsc_control_node.py  nsc_control_node_2.py  nsc_plotter.py  topic_io_node.py
src/goat/launch/: nsc.launch.py
src/goat_isaac_sim/: .gitignore  pyproject.toml  python.bat
src/goat_isaac_sim/goat_sim/control/: control_pipeline.py  nsc_control_node.py  safety_limiter.py
src/goat_isaac_sim/goat_sim/estimation/: state_types.py
src/goat_isaac_sim/goat_sim/model/: goat_model.py
src/goat_isaac_sim/main/: 00_standalone_scene.py  01_connect_scene.py
src/goat_isaac_sim/src/config/: sim_goat_config.yaml
src/goat_isaac_sim/src/goat_sim/control/: nsc_control_node.py  pd_controller.py  pi_controller.py
src/goat_isaac_sim/src/main/: 01_connect_scene.py
src/goat_isaac_sim/src/tutorials/: 00_tutorial_clock.py
src/goat_isaac_sim/tutorials/: 00_tutorial_clock.py  01_subscriber.py
(+22 files in other folders)
